--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\benri\\.virtualenvs\\DangerDungeon-5KtVkIGw\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\Ben\\.virtualenvs\\DangerDungeon-5KtVkIGw\\Scripts\\python.exe"
     ,"python.linting.pylintArgs":
     [
         "--extension-pkg-whitelist=lxml"  // The extension is "lxml" not "1xml"
